# UiTHack23

./: .gitignore  README.md  docker-compose.yml  fif.md  writeup_TEMPLATE.md
CTFd/CTFd/: docker-compose.yml  package.json  requirements.in  requirements.txt
Crypto/Code_page/: README.md  code  file2  text  writeup.md
Crypto/Hotel_caesar/: README.md  writeup.md
Crypto/Kasparovs_nightmare/: README.md
Crypto/Padding_oracle/: README.md  writeup.md
Crypto/anticygwin/: .gitignore  imageCrypto.py  img-to-flag.py  insertFlag.py
Crypto/lion_king/: README.md  writeup.md
Crypto/lost-my-keys/: README.md  find-keys.py  jungle.bak  lose-keys-readable.py  loseKeys.py  my-keys  writeup.md
Crypto/padding_oracle/: README.md
IRL/ARP_poisoning/: README.md  writeup.md
IRL/forgot_stego/: README.md
Misc/aww/: README.md  writeup.livemd  writeup.md
Misc/gangstas_messed_up_paradise/: README.md
Misc/guide/: README.md
Misc/so_you_think_you_can_math/: README.md  writeup.md
Misc/word1_1/: README.md  writeup.md
Noob/noob1/: README.md  writeup.md
Noob/noob2/: README.md  writeup.md
Noob/noob3/: README.md  writeup.md
Noob/noob4/: README.md  filesystem.sh  writeup.md
Noob/noob5/: README.md  writeup.md
Pwn/Ret2win/: Makefile  buffer_overflow.c  exploit.py  flag.txt  notes.md
Pwn/buffer_overflow/: exploit.py  notes.md
Pwn/mp3_player/: README.md  exploit.py  find_offset.py  writeup.md
Pwn/ollivanders/: README.md  writeup.md
Web/: README.md
Web/nokia/backend/: .gitignore  Cargo.toml
Web/nokia/backend/src/: button.rs  main.rs
notes/: README.md
(+197 files in other folders)
